# vf

./: .bazelrc  .clang-format  .gdb_history  .gitignore  .zshrc  CITATION.cff  README.md  WORKSPACE  aarch64_shell.sh  build_dev_images.sh  cavy-inf.html  cavy.html  dev_setup.sh  dockerfile  ls.html  pwd-inf.html  pwd.html  run_dev_containers.sh  setup_dev_imagies.sh  start_dev_containers.sh  x86_shell.sh  |= PF_W;
.circleci/: .bazelrc  config.yml
arch/: BUILD  errno.cc  errno.hh  syscall.hh  x86_64.cc  x86_64.hh
common/: BUILD  README  anonymous_file_descriptor.cc  anonymous_file_descriptor.hh  check.hh  directory_iterator.cc  directory_iterator.hh  directory_iterator_test.cc  double_fork.hh  environment_variables.cc  environment_variables.hh  expected.hh  extract_text_section.py  file_descriptor.hh  file_descriptor_b.cc  file_descriptor_test.cc  file_lock.hh  file_lock_test.cc  get_symbol_addr.cc  get_symbol_addr.hh  hellow.s  hex_dump.cc  hex_dump.hh  macros.hh  math.hh  mmap.hh  mmap_min_addr.cc  mmap_min_addr.hh  mmap_test.cc  parasite.bzl  parasite_linker_aarch64.lds  parasite_linker_x86_64.lds  parasite_main.cc  parasite_main.hh  patch_pattern.hh  patch_relinguish_control.hh  patch_relinguish_control_aarch64.cc  patch_relinguish_control_x86_64.cc  recursive_directory_iterator.hh  redirect_elf_entry_point.hh  (+5 more)
infector/: BUILD  cavy.cc  common.hh  common_infection.hh  extend_code_infect.cc  extend_code_infect.hh  so.cc  (+40 more)
toolchain/: BUILD.bazel  configure.bzl  gcc_aarch64_cc_toolchain_config.bzl  gcc_k8_cc_toolchain_config.bzl  gcc_x86_64_cc_toolchain_config.bzl
(+608 files in other folders)
