load(":gcc_k8_cc_toolchain_config.bzl", "gcc_k8_cc_toolchain_config")
load(":gcc_aarch64_cc_toolchain_config.bzl", "gcc_aarch64_cc_toolchain_config")

package(default_visibility = ["//visibility:public"])

cc_toolchain_suite(
    name = "gcc_k8",
    toolchains = {
        "k8": ":gcc_k8_toolchain",
    },
)

filegroup(name = "empty")

cc_toolchain(
    name = "gcc_k8_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":gcc_k8_cc_toolchain_config",
    toolchain_identifier = "gcc-k8-toolchain",
)

gcc_k8_cc_toolchain_config(name = "gcc_k8_cc_toolchain_config")

cc_toolchain_suite(
    name = "gcc_aarch64",
    toolchains = {
        "aarch64": ":gcc_aarch64_toolchain",
    },
)

cc_toolchain(
    name = "gcc_aarch64_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":gcc_aarch64_cc_toolchain_config",
    toolchain_identifier = "gcc-aarch64-toolchain",
)

gcc_aarch64_cc_toolchain_config(name = "gcc_aarch64_cc_toolchain_config")
